doc/windows/Delphi/64bit/single_card/gts.pas


function GT_PrfFollow(profile : SmallInt; dir:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_SetFollowMaster(profile : SmallInt;masterIndex : SmallInt;masterType : SmallInt=FOLLOW_MASTER_PROFILE; masterItem:SmallInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetFollowMaster(profile : SmallInt;out pMasterIndex : SmallInt;out pMasterType : SmallInt; out pMasterItem:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetFollowLoop(profile : SmallInt;followLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_GetFollowLoop(profile : SmallInt; out pLoop:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_SetFollowEvent(profile : SmallInt;followEvent : SmallInt;masterDir : SmallInt; pos:LongInt = 0): SmallInt; stdcall; External GTDLL;
function GT_GetFollowEvent(profile : SmallInt; out pEvent : SmallInt; out pMasterDir : SmallInt;  out pPos:LongInt	): SmallInt; stdcall; External GTDLL;
function GT_FollowSpace(profile : SmallInt; out pSpace:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowData(profile : SmallInt;masterSegment:LongInt;slaveSegment:Double; mytype:SmallInt = FOLLOW_SEGMENT_NORMAL;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowClear(profile:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowStart(mask:LongInt;fifoOption:LongInt=0): SmallInt; stdcall; External GTDLL;
function GT_FollowSwitch(mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetFollowMemory(profile:SmallInt;memory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetFollowMemory(profile:SmallInt;out pMemory:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetFollowStatus(profile:SmallInt;out pFifoNum:SmallInt;out pSwitchStatus:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetFollowPhasing(profile:SmallInt;profilePhasing:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetFollowPhasing(profile:SmallInt;out pProfilePhasing:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_Compile(pFileName:String;out pWrongInfo:TCompileInfo): SmallInt; stdcall; External GTDLL;
function GT_Download(pFileName:String): SmallInt; stdcall; External GTDLL;

function GT_GetFunId(pFunName : String;out funId : SmallInt): SmallInt; stdcall; External GTDLL;
function GT_Bind(thread : SmallInt;funId : SmallInt;page:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_RunThread(thread:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_StopThread(thread:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_PauseThread(thread:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_GetThreadSts(thread : SmallInt; out pThreadSts:TThreadSts): SmallInt; stdcall; External GTDLL;

function GT_GetVarId(pFunName : String;pVarName:String;out pVarInfo : TVarInfo): SmallInt; stdcall; External GTDLL;
function GT_SetVarValue(page:SmallInt;var pVarInfo:TVarInfo;var pValue:Double;count:SmallInt=1):SmallInt;stdcall;External GTDLL;
function GT_GetVarValue(page:SmallInt;var pVarInfo:TVarInfo;out pValue:Double;count:SmallInt=1):SmallInt;stdcall;External GTDLL;
